--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -3,4 +3,25 @@
 
 == Introduction
 
-This is an example quick course demonstrating the usage of Antora for authoring and publishing quick courses.
+Course Title: Course title FIXME
+
+Description:
+Course description FIXME
+
+Duration: FIXME hours
+
+== Objectives
+
+On completing this course, you should be able to:
+
+* Observable, measurable objective...
+* Observable, measurable objective...
+* Observable, measurable objective...
+
+== Prerequisites
+
+This course assumes that you have the following prior experience:
+
+* Course or experience...
+* Course or experience...
+* Course or experience...
